--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,14 @@
-Sample Rails 2.3 apps showing usage of Paperclip + S3 on Heroku.
+= Paperclip + S3 on Heroku
 
-===
+== Summary
 
-A few things to notice:
+* Add a .gems file with the "right_aws" gem
+
+* Insert your S3 credentials in config/s3.yml
+
+* Provide S3 related options when calling has_attached_file
+
+== A few things to notice
 
 * Pay special attention when copying code from tutorials. Some text converting filters like Textile and SmartyPants will convert "100x100" to "100×100" (notice how the "x" character was converted to ASCII 215, which will be passed to ImageMagick and cause a failure).
 
